# SQLdepth

./: README.md  pyproject.toml
models/posenet/: debug_posenet.py
notebooks/: experiment.ipynb  inference.ipynb
notebooks/.ipynb_checkpoints/: evaluation-checkpoint.ipynb  local_overfit-checkpoint.ipynb
src/: utils.py
src/config/: conf.py  convnextL_320x1024_conf.yaml  effb5_320x104_conf.yaml  mambaDepthBot_320x1024_conf.yaml  mambaDepthEnc_320x1024_conf.yaml  overfit_conf.yaml  resnet50_192x640_conf.yaml  resnet50_320x1024_conf.yaml  train_conf.yaml
src/data/kitti/kitti_splits/eigen/: visualize_gt_depths.py
src/data/kitti/kitti_splits/eigen_benchmark/: visualize_gt_depths.py
src/data/kitti/kitti_utils/: export_gt_depth.py  kitti_utils.py
src/datasets/: kitti_dataset.py  mono_dataset.py
src/evaluation/: evaluate_depth.py
src/inference/: test.py
src/losses/: loss.py
src/models/: SQLDepth.py  debug_sqldepth.py  layers.py
src/models/depth_decoders/: debug_depth_decoders.py  depth_decoder_QTR.py  sql_layers.py
src/models/depth_encoders/convnext/: convnextL_encoder.py  debug_convnextL_encoders.py
src/models/depth_encoders/efficientnet/: debug_efficientnet_encoders.py  efficientnet_encoder.py
src/models/depth_encoders/resnet/: debug_resnet_encoders.py  resnet_encoder.py
src/models/mamba/: MambaDepthBot.py  MambaDepthEnc.py  mamba_layers.py  mamba_utils.py
src/models/posenet/: debug_posenet.py  pose_cnn.py  pose_decoder.py
src/overfit/: local_trainer.py
src/train/: trainer.py
