[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "SQLdepth"
dynamic = ["version"]
authors = [
    { name = "Ionut-Orlando Grigore-Atimut", email = "ionut.grigore-atimut@student.upt.ro" }
]

description = "Self-supervised depth estimation for disertation thesis."
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "torch==2.0.1",
    "torchvision==0.15.2",
    "mamba-ssm",
    "pyyaml==6.0",
    "einops==0.6.0",
    "scipy==1.9.1",
    "opencv-python==4.7.0.72",
    "numpy==1.24.4",
    "tensorboard==2.12.0",
    "kornia==0.6.10",
]

[project.optional-dependencies]
dev = [
    "imgaug==0.4.0",
    "matplotlib==3.7.1",
    "onnx==1.13.0",
    "lovely-tensors==0.1.15",
    "pytorch-model-summary==0.1.2",
]

[tool.setuptools.packages.find]
include = ["src"]
exclude = ["notebooks"]